index_style.css
body{
    background-image: url(Images/Banner/image-from-rawpixel-id-2768303-original.png);
    background-position: center;
}

.background{
    height: 80vh;
    width: auto;
    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.7)), url(Images/img/pngtree-exam-papers-of-various-subjects-for-a-large-classroom-picture-image_3163803.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    
}

.header{
    position: relative;
    padding: 0 2rem;
}

.navbar-container{
    width: auto;
    height: auto;
    position: relative;
    display: flex;
    justify-content: space-between;

}

.navbar a {
    text-decoration: none;
    color: aliceblue;
    font-weight: bold;
}

.navbar li { 
    list-style: none;
}

.navbar .header-links{
    margin-top: 2%;
    display: flex;
    gap: 30px;
}

.navbar a:hover {
    color: #161748;
}


.logo-sec img{ 

    height: 70px;
    width: 200px;
    margin: 20px 60px;
    
}

.navbar{
    width: 100%;
    margin-left: 46%;
   
}


.banner-text{
    width: 100%;
   margin: 5%;
}

.banner-text h1{ 
    text-shadow: 7px 7px 13px #0000008c;
    color: rgb(255, 255, 255);
    font-size: 120px;

}

.banner-text h3{
    
    text-shadow: 7px 7px 13px #0000008c;
    color: rgb(255, 255, 255);
    letter-spacing: 2px;
    font-size: 70px;
    
}

.banner-text p{

    text-shadow: 7px 7px 13px #0000008c;
    color: rgb(255, 255, 255);
    font-size: 20px;
    
}

.wrapper{
    margin-top: 8%;
    justify-content: center;
    position: relative;
    display: flex;
    flex-wrap: wrap;

    

}

.panel { 
    justify-content: center;
    margin: 5px;
    box-shadow: 10px 10px 13px #00000062;
    width: 250px;
    height: 250px;
    border-radius: 5%;
}


.panel:hover {
    transform: scale(1.1);
    transition: 0.5s;


}

.panel h1 {

    text-shadow: 7px 7px 13px #0000006e;
    font-weight: bold;
    margin-top: 20%;
    text-align: center;
    text-transform: uppercase;
    font-size: 20px;
    padding: 30px;
    color: rgb(0, 0, 0);

}

.about-us{
    
    margin-top: 10%;

    
}

.about-us h3{
  
    font-size: 32px;
    font-family: 'calibri';
    font-weight: bold;
    color: rgb(37, 54, 110);
    
}


.about-us-title{
    text-align: center;
    font-family: "Lucida Bright";
    font-size: 70px;
    font-weight: bolder;
    color: rgb(37, 54, 110);
}
.about-us-sub-title{
    margin-right: 9%;
    text-align: center;
    font-family: "Lucida Bright";
    font-size: 20px;
    font-weight: bolder;
    margin-bottom: 2%;
    color: rgb(48, 50, 59);

}

.desc{
   
    text-align: center;
}

.inner-about-us h4{
    margin-top: 4%;
    font-weight: bolder;
    color: rgb(37, 54, 110);
    font-family: 'calibri';
}


.about-us-img img{
    margin-top: 2%;
    margin-left: 8%;
    width: 160vh;


}
.task-desc h1{
    text-transform: uppercase;
    margin-top: 4%;
    text-align: center;
    font-weight: bolder;
    font-size: 50px;
    color: rgb(37, 54, 110);

}

.task-desc h3{

    text-align: center;
    font-weight: bold;
    font-size: 20px;
    margin-right: 7%;
    color: #444444da;

}

.task-desc-wrapper{
    margin-top: 1%;
    margin-left: 4%;
    width: 90%;
    justify-content: center;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    

}

.bi-card-list{
    margin-top: 20%;
}

.task-desc-panel { 
    font-size: 12px;
    text-align: center;
    padding: 1%;
    justify-content: center;
    margin: 15px;
    width: 230px;
    height: 230px;
    background-color: #9c9c9c10;
    font-weight: bold
}


.objektif-section{

    background-color: #161748;
    display: flex;
    
}

.objektif-title{
    margin-top: 10%;
    text-align: center;
    font-family: "Lucida Bright";
    font-size: 70px;
    font-weight: bolder;
    letter-spacing: 5px;
    color: rgb(37, 54, 110);
}
.objektif-sub-title{
    margin-right: 7%;
    text-align: center;
    font-family: "Lucida Bright";
    font-size: 20px;
    font-weight: bolder;
    margin-bottom: 2%;
    color: rgb(48, 50, 59);

}

.objektif-icons{ 
    
    margin-top: 6%;
    
}

.objektif-desc b{

    font-size: 30px;

}

.objektif-desc{
    width: 50%;
    padding: 70px 50px;
    font-family: 'calibri';
    font-weight: 700;
    font-size: 18px;
    color: rgb(238, 238, 238);
    letter-spacing: 1px;

}

.objektif-img img{
    margin-right: 3%;
    width: 970px;
    height: 600px;
}

.links{
    margin-top: 3%;
    margin-bottom: 3%;
    display: flex;
    text-align: center;
    padding: 10px 120px;
    list-style: none;
    font-weight: bold;
    
}

.links-title{

    margin-top: 5%;
    text-align: center;
    font-family: "Lucida Bright";
    font-size: 70px;
    font-weight: bolder;
    
    color: rgb(37, 54, 110);

}

.links-sub-title{

    text-align: center;
    margin-right: 6%;
    font-family: "Lucida Bright";
    font-size: 20px;
    font-weight: bolder;
    margin-bottom: 2%;
    color: rgb(48, 50, 59);

}

.links a{
    color: #161748;
    text-decoration: none;
}

.links a:hover{
    color: #484aaf;
}

.footer-section{
    background-color: #161748;
    padding: 7px ;
    
}

.ministry-logo {
    color: aliceblue;
    margin-right: 20%;
    
    
}
.ministry-logo img{

    
    padding-left: 20px;
    width: 170px;
    height: 70px;
    
}

.inner-footer{
    width: 100%;
    height: 43%;
    display: flex;
    justify-content: space-between;



}

.contact-us{
    font-family: 'calibri';
    font-weight: bold;
    padding-top: 1%;
    color: aliceblue;
    margin-left: 3%;
    padding-bottom: 1%;
}

.copyright {
   
   
    background-color: rgb(22, 22, 22);
    text-align: center;
    color: aliceblue;
    font-family: 'calibri';

    
}

@media screen and (max-width: 500px) {
    .background{
        height: 40vh;
        background-size: cover;
        background-position: center;
        
    }
    .logo-sec img{
        
            height: 50px;
            width: 100px;
            margin: 10% 20%;
        
    }
    .navbar .header-links{
        float: none;
        display: block;
        text-align: left;
    }

    .about-us-title{
        font-size: 20px;
        text-align: center;
    }
    .about-us-sub-title{
        font-size: 10px;
    }

    .about-us-img img{
        width: 160px;
        height: 190px;
    }
    .banner-text h1{
        font-size: 50px;
    }

    .banner-text h3{
        font-size: 20px;
    }

    .banner-text p{
        font-size: 10px;
    }
    
    .panel { 
       
        width: 200px;
        height: 100px;
        border-radius: 5%;
    }
    .panel h1{ 
       margin-bottom: 50%;
        font-size: x-small;
    }
    
   
    .inner-about-us{
    
        font-size: 5px;
    }
   
    .inner-about-us b{

        font-size: 5px;

    }

    .inner-about-us h3{
        font-size: 6px;
        
    }
    
    .inner-about-us h4{
        font-size: 3px;
        
    }
    
    .bi-arrow-right{
        width: 5px;
        height: 5px;

    }

    .objektif-desc{
       margin-bottom: 50%;
        font-size: 1px;
    }
    
    .objektif-desc b{
        font-size: 4px;
    }

   .bi-calendar-date{
    width: 1px;
    height: 1px;
   }
   
    .bi-book-half{
        width: 1%;
        height: 1px;
    }

    .bi-journals{
        width: 1px;
        height: 1px;

    }

    .objektif-title{
        font-size: 20px;
    }
    .objektif-sub-title{
        font-size: 10px;
    }
    .objektif-img img{
        width: 230px;
        height: 100px;
    }
    .objektif-section{
        
        width: 100%;
        height: 100px;
    }
    .links-title{
        font-size: 20px;
    }
    .links-sub-title{
        font-size: 10px;
    }
    .link{
    font-size: 8px;        
    }
    .links{
        padding: 10px;
    }
    .contact-us{
        font-size: 5px;
    }
    .ministry-logo img{
        width: 100px;
        height: 50px;
        margin-left: 50%;
    }

    @media screen and (max-width: 1200px) {

    }
  }

